--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hover-video-player": "^10.0.1",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
